1. fix: bytes format 2. tls13: serverExchangeGeneration and serverHello 3. fix(most times): keys overflow

--- a/src/RecOuter/style.module.css
+++ b/src/RecOuter/style.module.css
@@ -81,6 +81,7 @@
 
 .rec-explanation {
   display: none;
+  margin-top: 1em;
   margin-bottom: 1em;
 }
 
